--- a/Chat/Podfile
+++ b/Chat/Podfile
@@ -7,7 +7,13 @@ target 'Chat' do
 
   # Pods for Chat
 
+pod 'Firebase'
 pod 'Firebase/Core'
+pod 'Firebase/Auth'
+pod 'Firebase/Database'
+pod 'Firebase/Storage'
+pod 'JSQMessagesViewController'
+pod 'SDWebImage'
 
   target 'ChatTests' do
     inherit! :search_paths
